add some modifications in the UI

--- a/assets/css/paper-kit.css
+++ b/assets/css/paper-kit.css
@@ -8159,3 +8159,6 @@ License - nucleoapp.com/license/
 .profile-content{
   background: #edf2f6;
 }
+.card{
+  box-shadow: 0px 12px 19px -7px rgba(0, 0, 0, 0.3);
+}
