add user page & add form to add new user & add table to display all users

--- a/assets/css/paper-kit.css
+++ b/assets/css/paper-kit.css
@@ -5003,7 +5003,8 @@ License - nucleoapp.com/license/
   margin-bottom: 10px;
   padding: 4px;
   border-radius: 50% !important;
-  max-width: 100%;
+  width: 150px;
+  height: 150px;
 }
 
 .img-thumbnail {
