--- a/assets/css/paper-kit.css
+++ b/assets/css/paper-kit.css
@@ -8214,3 +8214,47 @@ License - nucleoapp.com/license/
 .users_list a{
     font-weight: bold;
 }
+.section{
+    padding-top: 0;
+    padding-bottom: 0;
+}
+.post-comments{
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+.post-comments h4{
+  font-size: 2.5rem;
+  font-weight: 400;
+  margin: 35px 0;
+}
+.post-comments p{
+  font-weight: 300;
+    font-size: 18px;
+    line-height: 1.9;
+    color: #6c757d;
+}
+.post-comments h3{
+  font-weight: 900;
+  margin:70px 0;
+
+}
+.comment-body{
+  overflow: hidden;
+}
+.comment-body .image{
+  float: left;
+  width: 60px;
+  height: 60px;
+}
+.comment-body img{
+  width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+.comment-body .desc{
+  float: right;
+  width: calc(100% - 80px);
+}
+.comment-body .name{
+  font-weight: 666
+}
