--- a/assets/css/paper-kit.css
+++ b/assets/css/paper-kit.css
@@ -8261,3 +8261,33 @@ License - nucleoapp.com/license/
 .img-circle{
   border : 5px solid #fff
 }
+.profile-post{
+  text-align: center;
+    padding: 15px;
+    background: #fff;
+    border: 1px solid #e6e6e6;
+    padding-bottom: 30px;
+}
+.profile-post .image{
+  width: 100px;
+    height: 100px;
+    margin: auto;
+    margin-top: -65px;
+}
+.profile-post .image img{
+  width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    border: 4px solid #fff;
+    box-shadow: 0 10px 30px -10px rgba(0,0,0,.4);
+}
+.profile-post h4{
+  font-size: 20px;
+}
+.profile-post p{
+  font-weight: lighter;
+  font-size: 15px;
+}
+.profile-post a{
+  margin-top: 20px;
+}
