--- a/assets/css/paper-kit.css
+++ b/assets/css/paper-kit.css
@@ -8259,7 +8259,8 @@ License - nucleoapp.com/license/
   font-weight: 666
 }
 .img-circle{
-  border : 5px solid #fff
+  border : 5px solid #fff;
+  box-shadow: 0 10px 30px -10px rgba(0,0,0,.4);
 }
 .profile-post{
   text-align: center;
